--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "expo": "~52.0.27",
     "expo-blur": "~14.0.2",
     "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.4",
+    "expo-file-system": "^18.0.8",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-secure-store": "^14.0.1",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
@@ -41,13 +45,17 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-print": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
